More tests, more use of the functional interfaces.